all-manifest/pozos-website-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pozos-website-service
  namespace: dev 
spec:
  type: ClusterIP 
  selector:
    app:  wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
